Finishing off Some China Stuff

--- a/localisation/countries_cosmetic_l_english.yml
+++ b/localisation/countries_cosmetic_l_english.yml
@@ -978,6 +978,56 @@
  CHI_Republic_cn_ADJ:0 "Chinese"
  CHI_Republic_an_ADJ:0 "Chinese"
 
+ CHI_Provisional_ni:0 "Provisional Government of China"
+ CHI_Provisional_ni_DEF:0 "Provisional Government of China"
+ CHI_Provisional_ds:0 "Provisional Government of China"
+ CHI_Provisional_ds_DEF:0 "Provisional Government of China"
+ CHI_Provisional_rc:0 "Provisional Government of China"
+ CHI_Provisional_rc_DEF:0 "Provisional Government of China"
+ CHI_Provisional_an:0 "Provisional Government of China"
+ CHI_Provisional_an_DEF:0 "Provisional Government of China"
+ CHI_Provisional_cn:0 "Provisional Government of China"
+ CHI_Provisional_cn_DEF:0 "Provisional Government of China"
+ CHI_Provisional_lb:0 "Provisional Government of China"
+ CHI_Provisional_lb_DEF:0 "Provisional Government of China"
+ CHI_Provisional_ss:0 "Provisional Government of China"
+ CHI_Provisional_ss_DEF:0 "Provisional Government of China"
+ CHI_Provisional_jc:0 "Provisional Government of China"
+ CHI_Provisional_jc_DEF:0 "Provisional Government of China"
+ CHI_Provisional_ni_ADJ:0 "Chinese"
+ CHI_Provisional_rc_ADJ:0 "Chinese"
+ CHI_Provisional_lb_ADJ:0 "Chinese"
+ CHI_Provisional_ss_ADJ:0 "Chinese"
+ CHI_Provisional_jc_ADJ:0 "Chinese"
+ CHI_Provisional_ds_ADJ:0 "Chinese"
+ CHI_Provisional_cn_ADJ:0 "Chinese"
+ CHI_Provisional_an_ADJ:0 "Chinese"
+
+ CHI_United_States_ni:0 "United States of China"
+ CHI_United_States_ni_DEF:0 "United States of China"
+ CHI_United_States_ds:0 "United States of China"
+ CHI_United_States_ds_DEF:0 "United States of China"
+ CHI_United_States_rc:0 "United States of China"
+ CHI_United_States_rc_DEF:0 "United States of China"
+ CHI_United_States_an:0 "United States of China"
+ CHI_United_States_an_DEF:0 "United States of China"
+ CHI_United_States_cn:0 "United States of China"
+ CHI_United_States_cn_DEF:0 "United States of China"
+ CHI_United_States_lb:0 "United States of China"
+ CHI_United_States_lb_DEF:0 "United States of China"
+ CHI_United_States_ss:0 "United States of China"
+ CHI_United_States_ss_DEF:0 "United States of China"
+ CHI_United_States_jc:0 "United States of China"
+ CHI_United_States_jc_DEF:0 "United States of China"
+ CHI_United_States_ni_ADJ:0 "Chinese"
+ CHI_United_States_rc_ADJ:0 "Chinese"
+ CHI_United_States_lb_ADJ:0 "Chinese"
+ CHI_United_States_ss_ADJ:0 "Chinese"
+ CHI_United_States_jc_ADJ:0 "Chinese"
+ CHI_United_States_ds_ADJ:0 "Chinese"
+ CHI_United_States_cn_ADJ:0 "Chinese"
+ CHI_United_States_an_ADJ:0 "Chinese"
+
  XSM_Viceroyalty_ni:0 "Viceroyalty of Qinghai"
  XSM_Viceroyalty_ni_DEF:0 "Viceroyalty of Qinghai"
  XSM_Viceroyalty_ds:0 "Viceroyalty of Qinghai"
