--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -4619,30 +4619,30 @@ SAN_jc:0 "Sanghli State"
  COR_cn_ADJ:0 "Corsican"
  COR_an_ADJ:0 "Corsican"
 
- FTR_ni:0 "Free Territory of Hui"
- FTR_ni_DEF:0 "Free Territory of Hui"
- FTR_ds:0 "Free Territory of Hui"
- FTR_ds_DEF:0 "Free Territory of Hui"
- FTR_rc:0 "Free Territory of Hui"
- FTR_rc_DEF:0 "Free Territory of Hui"
- FTR_an:0 "Free Territory of Hui"
- FTR_an_DEF:0 "Free Territory of Hui"
- FTR_cn:0 "Free Territory of Hui"
- FTR_cn_DEF:0 "Free Territory of Hui"
- FTR_lb:0 "Free Territory of Hui"
- FTR_lb_DEF:0 "Free Territory of Hui"
- FTR_ss:0 "Free Territory of Hui"
- FTR_ss_DEF:0 "Free Territory of Hui"
- FTR_jc:0 "Free Territory of Hui"
- FTR_jc_DEF:0 "Free Territory of Hui"
- FTR_ni_ADJ:0 "Hui"
- FTR_rc_ADJ:0 "Hui"
- FTR_lb_ADJ:0 "Hui"
- FTR_ss_ADJ:0 "Hui"
- FTR_jc_ADJ:0 "Hui"
- FTR_ds_ADJ:0 "Hui"
- FTR_cn_ADJ:0 "Hui"
- FTR_an_ADJ:0 "Hui"
+ FTR_ni:0 "Ningxia Free Territory"
+ FTR_ni_DEF:0 "Ningxia Free Territory"
+ FTR_ds:0 "Ningxia Free Territory"
+ FTR_ds_DEF:0 "Ningxia Free Territory"
+ FTR_rc:0 "Ningxia Free Territory"
+ FTR_rc_DEF:0 "Ningxia Free Territory"
+ FTR_an:0 "Ningxia Free Territory"
+ FTR_an_DEF:0 "Ningxia Free Territory"
+ FTR_cn:0 "Ningxia Free Territory"
+ FTR_cn_DEF:0 "Ningxia Free Territory"
+ FTR_lb:0 "Ningxia Free Territory"
+ FTR_lb_DEF:0 "Ningxia Free Territory"
+ FTR_ss:0 "Ningxia Free Territory"
+ FTR_ss_DEF:0 "Ningxia Free Territory"
+ FTR_jc:0 "Ningxia Free Territory"
+ FTR_jc_DEF:0 "Ningxia Free Territory"
+ FTR_ni_ADJ:0 "West-Chinese"
+ FTR_rc_ADJ:0 "West-Chinese"
+ FTR_lb_ADJ:0 "West-Chinese"
+ FTR_ss_ADJ:0 "West-Chinese"
+ FTR_jc_ADJ:0 "West-Chinese"
+ FTR_ds_ADJ:0 "West-Chinese"
+ FTR_cn_ADJ:0 "West-Chinese"
+ FTR_an_ADJ:0 "West-Chinese"
 
  SGH_ni:0 "Shanghai Republic"
  SGH_ni_DEF:0 "Shanghai Republic"
