--- a/localisation/PB_Britain_l_english.yml
+++ b/localisation/PB_Britain_l_english.yml
@@ -144,33 +144,15 @@
 
 
   PB_ENG_Kings_Agenda:0 "The King's Agenda"
-  PB_ENG_Address_Parliament:0 "Address the Parliament"
   PB_ENG_Ruled_Britannia:0 "Ruled Britannia"
-  PB_ENG_Military_Government:0 "The National Reorganization Process"
-  PB_ENG_Force_Recovery:0 "Force the National Recovery Act Through"
-  PB_ENG_Show_Trials:0 "Show Trials"
-  PB_ENG_Send_in_the_Bobbies:0 "Weed Out the Weaklings"
-  PB_ENG_the_Hammers:0 "Establish the Hammers"
-  PB_ENG_Imperial_Propaganda:0 "Would You Like to See Britannia Ruled Again?"
-  PB_ENG_Sway_the_Capitalists:0 "Committee on Technocracy"
-  PB_ENG_Purge_Socialists:0 "Red Scare"
-  PB_ENG_National_Reorganization_Complete:0 "National Reorganization Completed"
-  PB_ENG_Portraits:0 "A Portrait in Every Home"
-  PB_ENG_New_British_Man:0 "The New British Man"
-  PB_ENG_Imperial_Veneration:0 "The Emperor Protects"
-  PB_ENG_Imperial_Jobs_Plan:0 "Imperial Jobs Programme"
-  PB_ENG_Imperial_Support_Plan:0 "Imperial Health Service"
-  PB_ENG_Managed_Democracy:0 "Stage-Managed Democracy"
-  PB_ENG_German_Constitutionalism:0 "Embrace Germanic Constitutionalism"
-  PB_ENG_Saxe_Coburg_Restoration:0 "The Saxe-Coburg and Gotha Restoration"
-
-  PB_ENG_Emperor_Protects:0 "The Emperor Protects"
-  PB_ENG_Personality_Cult:0 "A Portrait in Every Home"
-  PB_ENG_Benevolent_Dictatorship:0 "Benevolent Absolutism"
-
-  PB_ENG_Waiting_for_Worms:0 "Clean up the Cities"
-  PB_ENG_Fight_Resistance:0 "Eliminate the Resistance"
-  PB_ENG_Labour_Camps:0 "Put the Dissidents to Work"
+  PB_ENG_Reorganize_Police:0 "Reorganize the Constabulary"
+  PB_ENG_Military_Loyalties:0 "Purge Disloyal Officers"
+  PB_ENG_Hearts_and_Minds:0 "Hearts and Minds"
+  PB_ENG_Privy_Council:0 "Establish the Privy Council"
+  PB_ENG_Crush_Resistance:0 "Finish off the Resistance"
+  PB_ENG_Encourage_Technocracy:0 "Committee on Technocracy"
+  PB_ENG_Imperial_Propaganda:0 "Imperial Propaganda"
+  PB_ENG_Imperial_Restoration:0 "The Edwardian Restoration"
 
   PB_ENG_1934_Imperial_Conference:0 "The 1934 Imperial Congress"
   PB_ENG_Reforming_the_Dominions:0 "Debate Dominion Reform"
@@ -178,101 +160,25 @@
   PB_ENG_Debate_Military_Policy:0 "Debate Military Policy"
 
   PB_ENG_Neo_Victorianism:0 "New Victorianism"
-  PB_ENG_White_Mans_Burden:0 "White Man's Burden"
-  PB_ENG_Centralization:0 "Centralization"
-  PB_ENG_British_Exceptionalism:0 "British Exceptionalism"
-  PB_ENG_African_Wealth:0 "The Wealth of Africa"
-  PB_ENG_Purge_Local_Leaders:0 "Purge Local Leaders"
-  PB_ENG_Undermine_America:0 "Undermine the Americans"
-  PB_ENG_Economic_Warfare:0 "Anglo-American Trade War"
-  PB_ENG_African_Settlement:0 "British Settlement"
-  PB_ENG_Loyalist_Administrators:0 "Demand Administrator Loyalty"
-  PB_ENG_War_on_Barbarism:0 "The War on Barbarism"
-  PB_ENG_Loyalist_American_Coup:0 "Revoke the Galloway Compromise"
-  PB_ENG_Coup_Failure:0 "Defiant to the End"
-  PB_ENG_Coup_Success:0 "Their Emperor, Now and Always"
+  PB_ENG_British_Settlements:0 "Increase Colonial Settlement"
+  PB_ENG_Resource_Quotas:0 "Resource Quotas"
+  PB_ENG_African_Industrializaation:0 "Bring Industry to Africa"
+  PB_ENG_Push_for_Migration:0 "A New World Awaits You in the Colonies"
+  PB_ENG_Integrate_Tunisia:0 "Integrate Tunisia"
+  PB_ENG_Seize_Colonial_Properties:0 "Seize Territory for Settlers"
+  PB_ENG_White_Mans_Burden:0 "The White Man's Burden"
+  PB_ENG_Reinforce_Racial_Hierarchy:0 "Reinforce the Racial Hierarchy"
+  PB_ENG_Renewed_Expansionism:0 "Renewed Expansionism"
+
+  PB_ENG_Fortify_the_Suez:0 "Fortify the Suez"
+  PB_ENG_Fortify_Gibraltar:0 "Fortify the Rock"
+  PB_ENG_Fortify_Singapore:0 "Fortify Singapore"
+  PB_ENG_Imperial_Assistance_Focus:0 "Imperial Mutual Assistance Plan"
+  PB_ENG_Imperial_Military_Focus:0 "Standardize the Imperial High Command"
+  PB_ENG_Imperial_Investment_Focus:0 "Imperial Investments Committee"
 
   PB_ENG_Englightened_Imperialism:0 "Enlightened Imperialism"
-  PB_ENG_Mission_to_Civilize:0 "Mission to Civilize"
-  PB_ENG_Expand_Local_Autonomy:0 "Increase Local Autonomy"
-  PB_ENG_Special_Relationship:0 "The Special Relationship"
-  PB_ENG_Open_Hand:0 "An Open Hand"
-  PB_ENG_Limited_Decolonization:0 "Limited Decolonization"
-  PB_ENG_Anglo_American_Corps:0 "Joint Anglo-American Corps"
-  PB_ENG_Merchant_Shipping:0 "Merchant Shipping Corps"
-  PB_ENG_Empire_Equals:0 "An Empire of Equals"
-  PB_ENG_Starship_Troopers_Reference:0 "Service Guarantees Citizenship"
-  PB_ENG_Partners_not_Superiors:0 "Partners, not Superiors"
-  PB_ENG_Reform_Commonwealths:0 "A Federation of Nations"
 
-  PB_ENG_Balfour_Proposition:0 "Examine the Balfour Proposition"
-  PB_ENG_Future_East_Africa:0 "Reorganize East Africa"
-  PB_ENG_Reorganize_Egypt:0 "Reorganize the Egyptian Protectorate"
-
-  PB_ENG_Rearmament:0 "Pursue Rearmament"
-  PB_ENG_Abandon_Isolationism:0 "Not So Spledid Isolationism"
-
-  PB_ENG_Look_West:0 "Look to the West"
-  PB_ENG_Mexico_Policy:0 "Re-Examine Mexican Policy"
-  PB_ENG_Reinforce_Nicaragua_Canal:0 "Reinforce the Nicaragua Canal"
-  PB_ENG_Contain_Mexico:0 "Contain Mexico"
-  PB_ENG_Support_Mexico:0 "Support Mexico"
-  PB_ENG_Contain_New_Granada:0 "Isolate Granadine Ambitions"
-  PB_ENG_Military_Mission_Argentina:0 "Military Mission to Buenos Aires"
-  PB_ENG_Approach_Tejas:0 "The Tejas Accords"
-  PB_ENG_Anglo_Mexican_Trade:0 "Anglo-Mexican Trade"
-  PB_ENG_Support_Transplatine_Alliance:0 "Support the Transplatine Alliance"
-
-  PB_ENG_Look_to_Europe:0 "Look to the Continent"
-  PB_ENG_Renew_German_Relations:0 "Renew the Imperial Powers"
-  PB_ENG_Radio_Free_Europe:0 "Radio Free Europe"
-  PB_ENG_Mutual_Defense_Policy:0 "Mutual Defense Plan"
-  PB_ENG_Support_Resistance:0 "A Rifle Behind Every Blade of Grass"
-  PB_ENG_Pan_European_Defense:0 "Pan-European Military Council"
-  PB_ENG_Resistance_Advisors:0 "British Resistance Advisors"
-  PB_ENG_Operation_Plantagenet:0 "Operation Plantagenet"
-
-  PB_ENG_Look_East:0 "Look to the East"
-  PB_ENG_Pragmatic_Alliance:0 "A Pragmatic Alliance"
-  PB_ENG_Ryuku_Trade:0 "The Ryuku Trade"
-  PB_ENG_Chinese_Revolution:0 "The Middle Kingdom in Flames"
-  PB_ENG_Support_Qing:0 "Support the Qing"
-  PB_ENG_Support_NRA:0 "Support the NRA"
-  PB_ENG_Reinforce_Ports:0 "Reinforce the Ports"
-  PB_ENG_Russian_Menace:0 "The Russian Menace"
-  PB_ENG_Reinforce_HBC:0 "Reinforce the Alaskan Border"
-
-  PB_Seek_New_Officers:0 "Seek New Officers"
-  PB_Doctrine_Debates:0 "Examine New Doctrines"
-  PB_Bletchley_Research:0 "Expand Bletchley Park"
-  PB_Special_Operations_Executive:0 "Department of Ungentlemanly Warfare"
-
-  PB_Seek_New_Officers:0 "Seek New Officers"
-  PB_Doctrine_Debates:0 "Examine New Doctrines"
-  PB_Maintain_Course:0 "Retain the Old Doctrines"
-  PB_Throw_out_Old_Doctrine:0 "Throw Out the Old Doctrines"
-  PB_Static_Defense:0 "Emphasize Static Defense"
-  PB_Mass_Motorization:0 "Mass Motorization"
-  PB_Defensive_Army:0 "A Defensive Army"
-  PB_Offensive_Army:0 "An Offensive Army"
-  PB_Fortress_Britain:0 "Fortress Britain"
-
-  PB_Naval_Expansion:0 "Naval Expansion"
-  PB_Mahanian_Doctrine:0 "Retain the Mahanian Doctrine"
-  PB_Embrace_Carriers:0 "Embrace Carrier Doctrines"
-  PB_Battlefleet:0 "Battlefleets"
-  PB_Invasion_Support:0 "Amphibious Support"
-  PB_Escort_Doctrine:0 "Fleet Escorts"
-  PB_Submarine_Research:0 "Submarine Research"
-
-  PB_Airfield_Expansions:0 "Expand the Air Fields"
-  PB_RAF_Fighters:0 "Focus on Fighters"
-  PB_RAF_Bombers:0 "Focus on Bombers"
-  PB_RAF_Close_Air_Support:0 "Close Air Support"
-  PB_RAF_Firebombing:0 "Firebombing"
-  PB_RAF_Tactical_Bombing:0 "Tactical Bombing"
-  PB_RAF_Missile_Research:0 "Rockety Research"
-  PB_RAF_Nuclear_Research:0 "The Trinity Programme"
 
   ##########################
   # TOOLTIPS
@@ -343,12 +249,22 @@
   ENG_Free_British_Movement:0 "Free Britain Movement"
   ENG_Civil_Liberties_Restored:0 "Civil Liberties Reinstated"
   ENG_Constitutional_Assurances:0 "Constitutional Assurances"
+  ENG_Reorganized_Police:0 "Reorganized Police Force"
+  ENG_Officers_Purged:0 "Officers Purged"
+  ENG_Technocratic_Management:0 "Technocratic Advisors"
+  ENG_Settlements:0 "Colonial Settlements"
+  ENG_Colonial_Migration:0 "Colonial Migration"
+  ENG_White_Mans_Burden:0 "White Man's Burden"
+  ENG_Renewed_Expansionism:0 "Renewed Expansionism"
+  ENG_Imperial_Assistance_Plan:0 "Imperial Mutual Assistance Plan"
+  ENG_Imperial_Military:0 "Standardized Confederation Military Command"
+  ENG_Imperial_Investments:0 "Imperial Investment Committee"
 
   ##########################
   # PARLIAMENT MECHANICS
   ##########################
   PB_ENG_Parliament:0 "The House of Commons"
-  PB_ENG_Parliament_desc:0 "The House of Commons is the primary governmental organ of His Majesty's Government, made up of 632 MPs elected from throughout the nation to propose and vote on important bills. The ruling party must maintain at least §Y50%§! support in the House of Commons to pass legislation. If the Opposition's support grows above §Y50%§!, it will significantly limit the party's ability to pass legislation and potentially spur a No Confidence Vote if §YOpposition Support§! grows too high"
+  PB_ENG_Parliament_desc:0 "The House of Commons is the primary governmental organ of His Majesty's Government, made up of 632 MPs elected from throughout the nation to propose and vote on important bills. The ruling party must maintain at least §Y50%§! support in the House of Commons to pass legislation. If the Opposition's support grows above §Y50%§!, it will significantly limit the party's ability to pass legislation and potentially spur a No Confidence Vote if §YOpposition Support§! grows too high\n\n\n\n"
   PB_Britain_Parliament_Opposition_Support_Amount:0 "Government Support is at §R[?ENG.opposition_support]%§!"
   ENG_Parliament_Opposition_Support_Low:0 "Government Support is at §R[?ENG.opposition_support]%§!"
   ENG_Parliament_Opposition_Support_Medium:0 "Government Support is at §Y[?ENG.opposition_support]%§!"
@@ -477,7 +393,7 @@
   britain.15.t:0 "No Clear Winner"
   britain.15.d:0 ""
   britain.15.a:0 "The Tories will form a Coalition Government"
-  britain.15.b:0 "The Whigs will lead a new Coalition"
+  britain.15.b:0 "The WUP will lead a new Coalition"
 
   britain.16.t:0 "The King's Opposition"
   britain.16.d:0 ""
