--- a/localisation/PB_Tejas_l_english.yml
+++ b/localisation/PB_Tejas_l_english.yml
@@ -10,6 +10,8 @@
   ##########################
   PB_TEX_Between_Giants:0 "A Republic Between Giants"
    PB_TEX_Between_Giants_desc:0 "Even before the Northern Revolution, Tejas had been divided between Mexicans and Americans, and the British and Spanish. Now, it finds itself still divided among political, racial, and foreign lines. The American Commonwealth to the east sits as the British-backed hegemon, while the Empire to the south lurks, waiting for an opportunity to strike at Tejas's freedom. While this nationalistic fervor will ensure our country is never seized by imperialists, racial and political tensions only further divide our nation..."
+  PB_TEX_Neither_English_Nor_Spanish:0 "Neither English Nor Spanish"
+  PB_TEX_Neither_English_Nor_Spanish_desc:0 ""
  PB_TEX_The_Texan_Boom:0 "Economic Boom"
  PB_TEX_The_Texan_Boom_desc:0 "Tejas has emerged as one of the most economically stable nations in the American continent. With a business friendly government, a stable democracy (at least on the surface), and an ample coastline, Tejas has found itself the subject of foreign investment and cross-continental trade. In addition, cooperation with the American Commonwealth and the British Empire, despite large-scale economic stagnation in both nations, have entrenched our prosperity with some of the greatest powers in the world."
  PB_TEX_pragmatic_president:0 "The Pragmatic President"
@@ -24,6 +26,8 @@ PB_TEX_Frontier_Spirit:0 "Good Ol' Texan Spirit"
 PB_TEX_welfare_for_loyal:0 "The Tejano Safety Net"
 PB_TEX_seize_land:0 "Land Seizures"
 PB_TEX_principles_of_santa_anna:0 "A Proper Government For The Tejanos"
+PB_TEX_Promises_Of_Autonomy:0 "Promises Of Autonomy"
+
 ####################
 # FOCI
 #####################
@@ -95,6 +99,32 @@ TEX_Seize_The_Businesses:0 "Stamp Out The Landowners"
 TEX_Seize_The_Businesses_desc:0 ""
 TEX_Wise_And_Virtous:0 "Wise and Virtuous Despotism"
 TEX_Wise_And_Virtous_desc:0 ""
+TEX_Empty_Promises:0 "Empty Promises"
+TEX_Empty_Promises_desc:0 ""
+TEX_Promise_Autonomy:0 "Promises Of Autonomy"
+TEX_Promise_Autonomy_desc:0 ""
+TEX_Well_Settle_This_Later:0 "Call For Elections"
+TEX_Well_Settle_This_Later_desc:0 ""
+TEX_Concessions_For_Demilitarization:0 "Concessions For Demilitarization"
+TEX_Concessions_For_Demilitarization_desc:0 ""
+TEX_Threaten_Military_Force:0 "Pre-Election Crackdowns"
+TEX_Threaten_Military_Force_desc:0 ""
+TEX_The_Elections:0 "The Elections"
+TEX_The_Elections_desc:0 ""
+TEX_The_Socialist_Union:0 "President Johnson"
+TEX_The_Socialist_Union_desc:0 ""
+TEX_The_Passion_Of_Christ:0 "The Charity Of God"
+TEX_The_Passion_Of_Christ_desc:0 ""
+TEX_Social_Security:0 "Social Security"
+TEX_Social_Security_desc:0 ""
+TEX_Public_Radio:0 "Public Broadcasting"
+TEX_Public_Radio_desc:0 ""
+TEX_New_Deal:0 "A New Deal"
+TXT_New_Deal_desc:0 ""
+TEX_Our_Fate_Is_Not_In_Mexico:0 "Toe The Line"
+TEX_Our_Fate_Is_Not_In_Mexico_desc:0 ""
+TEX_Great_Society:0 "The Great Society"
+TEX_Great_Society_desc:0 ""
 #######################
 # COUNTRY FLAGS
 ######################
@@ -127,3 +157,27 @@ tejas.5.t:0 "The Second Battle of the Alamo"
 tejas.5.d:0 "The battle for the fate of Tejas has begun. A large amount of settlers, armed with artillery and thousands of rifles, have taken up a defensive position in the Alamo Mission once more, in a homage to the darkest hour of the failed Texan Revolution of the 1800s. With control over the Alamo mission, the settlers then hope to seize federal government buildings in San Antonio, fully taking over the apparatus of government and crowning Andrew Jackson Houston as the new president.\n\nHowever, to do that, they first must resist the Tejano forces of General Cordero, who are looking for a repeat of the same outcome of the first Texan Revolution. WWith the odds in their favor, it seems that Cordero will easily seize the Alamo and bring an end to the Second Revolution - but one should never underestimate Anglo resolve in the face of sure defeat."
 tejas.5.a:0 "Drive back the Mexican dogs!"
 tejas.5.b:0 "¡Degüello! Give them no quarter!"
+
+tejas.6.t:0 "The New Government"
+tejas.6.d:0 "Despite his promises of restoring Tejano democracy, Virgilio Cordero has declared himself provisional President of the Republic of Tejas, amending the constitution and declaring the administration of de la Huerta null and void in the eyes of Tejano law. Cordero's actions have been accompanied by a declaration of martial law across the Republic of Tejas and the suspension of elections infinitely until "the measures of Tejano national security are safe and secure," although he assures the legislature will still be in succession.\n\nDespite his actions being downright illegal in Tejano law and an official condemnation from de la Huerta, Cordero remains popular among the people, especially the Tejano population, who reveres him for stopping the second Texan Revolution. To further calm the people, Cordero has also announced broad populist reforms, that he believes will eliminate corruption and return control to the people, not the greedy Anglo businesses and settlers who have sapped the strength of the Tejano people.\n\nWhatever Cordero's reforms may be, it is clear that his control over the Republic of Tejas has been secured."
+tejas.6.a:0 "Well, that's certainly interesting."
+
+tejas.7.t:0 "The Emergency Option"
+tejas.7.d:0 "After striking administrative and military priveleges were given to him, Virgilio Cordero has taken the reigns of government, with a seal of approval from President de la Huerta, who has assured the people that Cordero's junta is only temporary to secure the military and political stability of Tejas. Cordero now serves as de-facto head of state of Tejas, with priveleges equivalent if not greater than those of the president, while de la Huerta largely serves as a figurehead.\n\nWhile de la Huerta and Cordero both have explained that the junta is only termporary, many doubt the marshal's commitment to Tejano democracy, and democratic Anglo-aligned parties have already begun to accuse of him of "paving the way for a progressive Tejano-supremacist dictatorship.""
+tejas.7.a:0 "That was unexpected."
+
+tejas.8.t:0 "The New Parliament"
+tejas.8.d:0 "Houston's government promised an end to Tejano political dominance and bias in the legislature, the courts, and the presidency, but such reforms are easier said than done. With large-scale opposition from even parties in the interest of the Anglo and settler populations, Houston's party has must decide what the course of action shall be toward the parliament.\n\nJackson Houston's first course of action is to increase the number of legislative seats that represent Anglo areas, and then hold snap elections for those seats, which should be won easily by the Anglos, therefore restoring Anglo positions in the Texan government.\n\nHowever, there is one question on the mind of the Know Nothing Party - is it worth it to ally with other Anglo-interest parties, to ensure that Tejanos do not win victories in the seats that we have created, or shall we go it alone - without foolish socialists or liberals?"
+tejas.8.a:0 "We are the only party for Texas!"
+tejas.8.b:0 "A broad coalition of Anglos is the way."
+
+tejas.9.t:0 "The President's Plan"
+tejas.9.d:0 "In response to the chaos engulfing Eastern Tejas, President Adolfo de la Huerta has announced his plan - pragmatic placation of the Anglo populace, in contrary to the beliefs espoused by many conservatives and military generals, such as marshal Virgilio Cordero. The liberal government has already announced numerous summits and talks with the hostile settler groups currently controlling Oklahoma and East Texas, and while conservatives have spoke against the Huerta administration's actions in not sending in the military, it is likely that this will bring about a peaceful and prosperous situation for all Tejanos. Or so says de la Huerta.\n\nMany distrust the talks between de la Huerta, and believe that either he will offer empty promises or too many promises - some think he will use his newfound power and support to call elections. With Anglo-friendly forces gaining even more power, an election could be disastrous for Tejano democracy..."
+tejas.9.a:0 "Interesting idea."
+
+tejas.10.t:0 "de la Huerta's Elections"
+tejas.10.d:0 "President Adolfo de la Huerta has officially formalized the Elections of [GetMonth] [GetYear], with four major parties participating. The Know Nothings, despite their relative power, have decided not to participate in the election, with their leader Andrew Jackson Houston endorsing John Nance Garner to become the next President of Tejas. His supporters, enraged, have declared that foul play is at work, but de la Huerta's ban on write-in campaigns has eliminated Jackson Houston's chances of securing the presidency.\n\nde la Huerta is of course running again, but he is accompanied by numerous other parties and potential presidents. Lyndon B. Johnson, a young, firebrand Anglo, has secured the nomination of the Socialist Union Party, while Nance Garner, another Anglo, has secured the nomination of the business-friendly Texas Republican Party. On the Tejano side, there is the National Coalition of conservatives and former monarchists, led by Ignacio Bonillas.\n\nWith all the votes counted, who shall secure the nomination?"
+tejas.10.a:0 "The Socialist Union!"
+tejas.10.b:0 "The Democratic Party!"
+tejas.10.c:0 "The Texan Republican Party!"
+tejas.10.e:0 "The National Coalition!"
