Preliminary Australie Work + minor Australian state things

--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -3140,16 +3140,16 @@
  FST_lb_DEF:0 "Australie"
  FST_ss:0 "Australie"
  FST_ss_DEF:0 "Australie"
- FST_jc:0 "Australie"
- FST_jc_DEF:0 "Australie"
- FST_ni_ADJ:0 "Australo-French"
- FST_rc_ADJ:0 "Australo-French"
- FST_lb_ADJ:0 "Australo-French"
- FST_ss_ADJ:0 "Australo-French"
- FST_jc_ADJ:0 "Australo-French"
- FST_ds_ADJ:0 "Australo-French"
- FST_cn_ADJ:0 "Australo-French"
- FST_an_ADJ:0 "Australo-French"
+ FST_jc:0 "Australien Republic"
+ FST_jc_DEF:0 "the Australien Republic"
+ FST_ni_ADJ:0 "Australien"
+ FST_rc_ADJ:0 "Australien"
+ FST_lb_ADJ:0 "Australien"
+ FST_ss_ADJ:0 "Australien"
+ FST_jc_ADJ:0 "Australien"
+ FST_ds_ADJ:0 "Australien"
+ FST_cn_ADJ:0 "Australien"
+ FST_an_ADJ:0 "Australien"
 
  RCH_ni:0 "Revolutionary State of China"
  RCH_ni_DEF:0 "Revolutionary State of China"
