--- a/localisation/victory_points_l_english.yml
+++ b/localisation/victory_points_l_english.yml
@@ -314,8 +314,8 @@
  VICTORY_POINTS_12406:0 "Sydney"
  VICTORY_POINTS_1652:0 "Boltsholm"
  VICTORY_POINTS_7520:0 "Montalembert"
- VICTORY_POINTS_7564:0 "Grasse"
- VICTORY_POINTS_7566:0 "Lointaneville"
+ VICTORY_POINTS_10475:0 "Fitzroy"
+ VICTORY_POINTS_7566:0 "Townsville"
  VICTORY_POINTS_7669:0 "Heutsz"
  VICTORY_POINTS_12910:0 "Klemzig"
  VICTORY_POINTS_1814:0 "Te Whanganui-a-Tara"
