--- a/localisation/parties_l_english.yml
+++ b/localisation/parties_l_english.yml
@@ -343,6 +343,17 @@
  HUN_ds_party_long:0 "Royalist maradványok"
  HUN_ni_party:0 "Népi Front"
  HUN_ni_party_long:0 "Népi Front"
+ 
+ FST_jc_party:0 "FpAL"
+ FST_jc_party_long:0 "Front pour l’Australie Libre"
+ FST_lb_party:0 "CLdA"
+ FST_lb_party_long:0 "Conseil Libre d’Australie"
+ FST_cn_party:0 "Brévié Government"
+ FST_cn_party_long:0 "Brévié Government"
+ FST_an_party:0 "German Pacific Authority"
+ FST_an_party_long:0 "German Pacific Authority"
+ FST_ni_party:0 "FRA"
+ FST_ni_party_long:0 "Front Revanchard Australien"
 
  ############
  # POLITICAL PARTY TEMPLATE 
