texas stuff but i got bored

--- a/localisation/PB_Tejas_l_english.yml
+++ b/localisation/PB_Tejas_l_english.yml
@@ -125,6 +125,16 @@ TEX_Our_Fate_Is_Not_In_Mexico:0 "Toe The Line"
 TEX_Our_Fate_Is_Not_In_Mexico_desc:0 ""
 TEX_Great_Society:0 "The Great Society"
 TEX_Great_Society_desc:0 ""
+TEX_Peace_In_The_East:0 "Peace In The East"
+TEX_Peace_In_The_East_desc:0 ""
+TEX_Settler_Land_Reform:0 "Pro-Settler Land Reform"
+TEX_Settler_Land_Reform_desc:0 ""
+TEX_Hold_Them_Accountable:0 "Hold The Tejanos Accountable"
+TEX_Hold_Them_Accountable_desc:0 ""
+TEX_Not_Autonomy_But_Unity:0 "Not Autonomy, But Unity"
+TEX_Not_Autonomy_But_Unity_desc:0 ""
+TEX_The_Republicans:0 "President Garner"
+TEX_The_Republicans_desc:0 ""
 #######################
 # COUNTRY FLAGS
 ######################
