Fixed Kaiserreich Goals, Disabled inactive trees

--- a/localisation/PB_Generic_Decisions_l_english.yml
+++ b/localisation/PB_Generic_Decisions_l_english.yml
@@ -11,7 +11,7 @@
   PB_Political_Officers:0 "Implement Political Officers"
 
   PB_Domestic_Decisions:0 "Managing Domestic Affairs"
-  PB_Domestic_Decisions_desc:0 "Our government has a myriad of issues that need to be managed, and it is the duty of the ruling faction to handle those issues. Budgets, strikes and protests abound and we should do our best to manage domestic affairs,\n\nOur Government's current level of §YCentralization§! is §Y[?ROOT.centralization]%§!\n\nOur Nation's current level of §YUnrest§! is §Y[?ROOT.national_dissent]%§!"
+  PB_Domestic_Decisions_desc:0 "Our government has a myriad of issues that need to be managed, and it is the duty of the ruling faction to handle those issues. Budgets, strikes and protests abound and we should do our best to manage domestic affairs."
   PB_Rally_Public_Support:0 "Rally Public Support"
   PB_Grant_Local_Autonomy:0 "Increase Local Autonomy"
 
