--- a/localisation/PB_France_l_english.yml
+++ b/localisation/PB_France_l_english.yml
@@ -223,6 +223,35 @@
   French.46.d:0 ""
   French.46.a:0 "Good."
 
+  French.47.t:0 "France establishes the Continental System"
+  French.47.d:0 ""
+  French.47.a:0 "All in the name of unity, right?"
+
+  French.48.t:0 "The Mass Deportation of Germans"
+  French.48.d:0 ""
+  French.48.a:0 "Good riddance."
+  French.48.b:0 "The French will pay for this."
+
+  French.49.t:0 "Tying up Loose Ends"
+  French.49.d:0 ""
+  French.49.a:0 "Remnants of the past best left forgotten."
+
+  French.50.t:0 "French Labour Demands"
+  French.50.d:0 ""
+  French.50.a:0 "We have no choice"
+
+  French.51.t:0 "German Conscript Workers Arrive"
+  French.51.d:0 ""
+  French.51.a:0 "Excellent"
+
+  French.52.t:0 "France seizes German Industries"
+  French.52.d:0 ""
+  French.52.a:0 "Victory cannot be achieved without sacrifice"
+
+  French.53.t:0 "German Factories Moved"
+  French.53.d:0 ""
+  French.53.a:0 "Not quite reparations but it will suffice"
+
   ##########################
   # IDEAS
   ##########################
@@ -268,7 +297,28 @@
   FRA_Officers_Purged:0 "Officers Purged"
   FRA_SP_Officer_Corps:0 "Politically Loyal Officer Corps"
   FRA_SP_State:0 "L'État de sécurité"
-  
+  FRA_State_Catholicism:0 "State Catholicism"
+  FRA_National_Corporatism:0 "National Corporatism"
+  FRA_Carolingian_Legacy_idea:0 "Legacy of the Carolingian Empire"
+  FRA_Supremacy_of_Race:0 "Racial Supremacicist Doctrine"
+  FRA_Monarchist_Remnants_Purged:0 "Purging the Monarchist Remnants"
+  FRA_Class_Struggle:0 "Emphasis on Class Struggle"
+  FRA_Armandist_Syndicalism:0 "Armandist Syndicalism"
+  FRA_Armandist_Syndicalism2:0 "Armandist Syndicalism"
+  FRA_Armandist_Syndicalism3:0 "Armandist Syndicalism"
+  FRA_League_Cooperation:0 "Cooperation with the Patriotic Leagues"
+  FRA_Youth_Leagues:0 "Fédération Française des Etudiants d'Action Française"
+  FRA_Continental_System:0 "The Continental System"
+  FRA_Continental_System_puppet:0 "The Continental System"
+  FRA_Manifest_Destiny_Idea:0 "Manifest Destiny"
+  FRA_Armandist_Constitution_idea:0 "Armandist Constitution"
+  FRA_Armandist_Constitution_idea2:0 "Armandist Constitution"
+  FRA_Armandist_Constitution_idea3:0 "Armandist Constitution"
+  FRA_Armandist_Revolution:0 "A Revolutionary State against the Revolution"
+  FRA_Slave_Labour:0 "Labour Camps"
+  FRA_Slave_Labour_Political_Included:0 "Labour Camps"
+  FRA_Slave_Labour_Political_Excluded:0 "Labour Camps"
+  FRA_Heavy_Water:0 "Heavy Water Research"
 
   ##########################
   # FOCUS
@@ -303,6 +353,39 @@
   PB_FRA_Joan_of_Arc_Legacy:0 "Legacy of Jeanne d'Arc"
   PB_FRA_Ideological_Fanatacism:0 "Ideological Fanatacism"
 
+  PB_FRA_Doctrine_of_Integralism:0 "The Doctrine of Integralism"
+  PB_FRA_Catholic_State:0 "A Nation of Faith"
+  PB_FRA_Anti_Parliamentarianism:0 "Reversing the French Reformation"
+  PB_FRA_Anti_Semetism:0 "Anti-Semetic Propaganda"
+  PB_FRA_Modern_Absolutism:0 "L’État, c’est moi"
+  PB_FRA_Cooperation_with_the_Leagues:0 "Alliance with the Patriotic Leagues"
+  PB_FRA_Rally_the_Youth:0 "Rally the Youth"
+  PB_FRA_Imperial_Glory:0 "Rebirth of the French Empire"
+
+  PB_FRA_Anti_Leftism:0 "Bulwark against Socialism"
+  PB_FRA_Eliminate_Unions:0 "Eliminate Unions Entirely"
+
+  PB_FRA_Revanchist_Fervor:0 "Revanchist Fervor"
+  PB_FRA_Carolingian_Legacy:0 "Carolingian Legacy"
+  PB_FRA_Racial_Science:0 "Committee on the Racial Sciences"
+  PB_FRA_Propose_European_Commonwealth:0 "The European Commonwealth"
+  PB_FRA_Purge_Catholic_Influence:0 "Purge Catholic Influences"
+  PB_FRA_Continental_System:0 "Establish the Continental System"
+  PB_FRA_Expel_Germans:0 "Francify the Borderlands"
+  PB_FRA_Manifest_Destiny:0 "Destinée Manifeste"
+
+  PB_FRA_Purge_Monarchist_Remnants:0 "Purge the Monarchist Remnants"
+  PB_FRA_Assassinate_the_Royals:0 "No More Loose Ends"
+
+  PB_FRA_Armandism:0 "Armandism Forever"
+  PB_FRA_Emphasize_Class_Struggle:0 "Emphasize the Class Struggle"
+  PB_FRA_National_Syndicalism:0 "Syndicalisme National"
+  PB_FRA_De_Centralized_Administration:0 "De-Centralized Administration"
+  PB_FRA_Expand_Paramilitaries:0 "Expand Regional Paramilitaries"
+  PB_FRA_National_Unions:0 "Comité national des syndicats"
+  PB_FRA_Sorelianism:0 "Armandist-Sorelianism"
+  PB_FRA_Revolution_against_Revolution:0 "A Revolutionary against the Revolution"
+
   PB_FRA_Military_Government:0 "The Military in Control"
   PB_FRA_Mass_Purge:0 "Purge the SP Remnants"
   PB_FRA_Military_Centralism:0 "L'État militaire"
@@ -320,6 +403,24 @@
   PB_FRA_Purge_Military:0 "Night of the Truncheon"
   PB_FRA_Rehabilitated_Military:0 "A Rehabilitated Military"
   PB_FRA_Son_of_Doriot:0 "The Marshal's Favored Son"
+
+  PB_FRA_Industrial_Focus:0 "The New French Economy"
+  PB_FRA_Autarky:0 "Autarky"
+  PB_FRA_Fuel_Synthesis:0 "Synthetic Fuels Development"
+  PB_FRA_Military_Industry:0 "Military Industry"
+  PB_FRA_Slave_Labour:0 "Labour Camps"
+  PB_FRA_Caste_Economy:0 "An Economy of Castes"
+  PB_FRA_Military_Industry2:0 "Expand Military Industries"
+  PB_FRA_Enslave_Political_Prisoners:0 "Redeem the Political Prisoners"
+  PB_FRA_Enslave_Only_Racial:0 "Maintain the Racial Bias"
+  PB_FRA_Peculiar_Institutions:0 "Peculiar Institutions"
+  PB_FRA_Military_Industry3:0 "Mass Military Expansion"
+  PB_FRA_German_Labour_Imports:0 "Import German Labour"
+  PB_FRA_German_Industry:0 "Migrate Rhenish Industries"
+  PB_FRA_Chattel_Slavery:0 "German Servitude"
+  PB_FRA_Heavy_Water_Research:0 "Heavy Water Development"
+  PB_FRA_Rhineland_Integration:0 "Integration of the Rhineland"
+  PB_FRA_MGE_Subservient_Partner:0 "What's Theirs is Ours"
   
   PB_FRA_Remilitarize_Lorraine:0 "Remilitarize Lorraine"
   PB_FRA_Befriend_Russia:0 "Befriend Russia"
@@ -330,6 +431,7 @@
   PB_FRA_Reintegrate_Wallonia:0 "Purge the Wallonian Independence Leaders"
   PB_FRA_Greater_France:0 "A Dream of Greater France"
   PB_FRA_Dutch_Crisis:0 "Demand the Continental Netherlands"
+  PB_FRA_Attack_Germany:0 "End the German Hegemony"
   PB_FRA_Pact_of_Thorns:0 "The Pact of Thorns"
   PB_FRA_Alliance_with_Spain:0 "Renew our Spanish Alliance"
   PB_FRA_Policy_towards_Italy:0 "Policy Towards Italy"
@@ -346,6 +448,7 @@
   PB_FRA_Fortress_France_South:0 "Fortify the Côte d'Azur"
   PB_FRA_Fortress_France_West:0 "Fortify Brittany"
   PB_FRA_Fortress_Europe:0 "Forteresse Europe"
+  PB_FRA_War_Devotion:0 "Devotion to the War Effort"
 
   PB_FRA_Reform_Military:0 "Reform the Military"
 
