--- a/localisation/PB_Government_l_english.yml
+++ b/localisation/PB_Government_l_english.yml
@@ -28,6 +28,34 @@ PB_NI_Japanese_Militarism:0 "Japanese Militarism"
 PB_NI_American_Idealism:0 "American Idealism"
 PB_NI_Chinese_Resilience:0 "Chinese Resilience"
 
+policies:0 "Domestic Policy"
+voting_laws:0 "Voting Laws"
+PB_No_Voting:0 "No Voting Allowed"
+PB_Weighted_Wealth:0 "Weighted Wealth"
+PB_Universal_Suffrage:0 "Universal Suffrage"
+
+press_laws:0 "Press Laws"
+PB_State_Press:0 "State-Controlled Press"
+PB_Limited_Censorship:0 "Semi-Independent Press"
+PB_Free_Press:0 "Independent Free Press"
+
+citizenship_laws:0 "Citizenship Laws"
+PB_Universal_Citizenship:0 "Universal Citizenship"
+PB_Colonial_Segregation:0 "Segregation in Colonies"
+PB_Core_Segregation:0 "Segregation in Core Territory"
+PB_Racial_Hierarchy:0 "Race-Based Hierarchy"
+
+currency:0 "Currency"
+PB_Local_Currency:0 "Standard National Currency"
+PB_Pound_Sterling:0 "Pound Sterling"
+PB_Thaler:0 "Thaler"
+PB_Franc:0 "Franc"
+
+civilization_status:0 "Civilization Level"
+PB_Fully_Westernized:0 "Fully Westernized Nation"
+PB_Partially_Westernized:0 "Partially Westernized Nation"
+PB_Uncivilized_Nation:0 "Uncivilized Nation"
+
 ##########################
 # GOVERNMENT TYPE
 ##########################
