Lot of shit done

--- a/localisation/PB_Italy_l_english.yml
+++ b/localisation/PB_Italy_l_english.yml
@@ -166,6 +166,46 @@ ITA_Crackdown_against_Socialism:0 "Limit Socialist Influence"
 ITA_Glorify_the_Military:0 "Glorify the Army"
 ITA_Placate_Colonial_Landowners:0 "Placate Colonial Contacts"
 ITA_Tying_up_Loose_Ends:0 "Night of the Purification"
+ITA_The_Trains_of_Italia:0 "Via Balbo"
+ITA_Positive_Political_Violence:0 "Violence against the Opposition"
+ITA_Popularize_Aviation:0 "Popularize Aviation"
+ITA_Society_of_Soldiers:0 "Spirit of the Soldier"
+ITA_Deal_with_the_Church:0 "The Lateran Treaty"
+ITA_Liberator_of_the_Opressed:0 "The Liberation of Spirits League"
+ITA_Denounce_the_Treaties:0 "Denounce the Unequal Treaties"
+ITA_Spirit_of_Rome:0 "Spirit of the Fasces"
+ITA_Secure_Jewish_Rights:0 "Protect Jewish Italians"
+ITA_Spirit_of_the_Risorgimento:0 "War of the Masses"
+ITA_Partial_Gender_Equality:0 "Political Gender Equality"
+ITA_Spirit_of_the_Future:0 "Spirit of the Future"
+ITA_Abolishment_of_Marriage:0 "Abolishment of Marriage"
+ITA_Chain_Church_Power:0 "Chain the Church"
+ITA_Secret_Rearmement_Program:0 "Secret Rearmement Program"
+ITA_Combat_the_Economic_Malace:0 "Combat the Economic Crisis"
+ITA_De_Stefani_Plan:0 "De Stefani Steps in"
+ITA_Embrace_Economic_Radicalism:0 "Appointing Rocco"
+ITA_Minor_Privatization:0 "Minor Privatization"
+ITA_Cut_Taxation:0 "Major Taxation Cuts"
+ITA_Promote_Foreign_Trade:0 "Secure Foreign Capital"
+ITA_Fund_Ansaldo:0 "400 Million for Ansaldo"
+ITA_Bonifica_Integrale:0 "Bonifica Integrale"
+ITA_Modernize_Northern_Industry:0 "Modernize the North"
+ITA_Battle_against_Independent_Unions:0 "Nationalize Labor Unions"
+ITA_Syndical_Laws:0 "Class Cooperation Laws"
+ITA_National_Council_of_Corporations:0 "National Council of Corporations"
+ITA_Battle_for_Autarky:0 "Battle for Autarky"
+ITA_Complete_Northern_Electrification:0 "Complete Northern Electrification"
+ITA_Unita_Economica:0 "Unità Economica"
+ITA_Simplified_Tax_Coce:0 "Simplified Tax Code"
+ITA_Amend_the_Airforce_Section:0 "Secret Airforce Testing"
+ITA_Renew_our_Doctrine:0 "Renew our Doctrine"
+ITA_Modernize_Our_Guns:0 "Modernize our Rifles"
+ITA_Focus_on_Mobility:0 "Focus on Mobility"
+ITA_Focus_on_Firepower:0 "Focus on Power"
+ITA_Adopt_Light_Tanks:0 "Adopt Light Tanks"
+ITA_Keep_Tankettes:0 "Keep the Tankettes"
+ITA_Planned_Army_Rationing:0 "Disciplined Army Rationing"
+
 
 ###########################
 # MINISTERS
@@ -187,7 +227,27 @@ ITA_PB_Giuseppe_Bastianini_FAM:0 "Giuseppe Bastianini"
 PB_Popular_Aviator:0 "Popular Aviator"
 ITA_PB_Balbo_FAM:0 "Italo Balbo"
 ITA_PB_Luigi_ECM:0 "Luigi Einaudi"
+ITA_PB_Volpi_ECM:0 "Giuseppe Volpi"
 
 #########MISSION TREE
-ITA_PAX_BRITANNICA_DESC:0 "The Kingdom of Italy has been relatively stable ever since the Great War compared to the other European powers. While extreme nationalism still exists in the nation, it does not thrive and many people support the healthy democracy that the nation sports. On the worldstage, Italy has grown in importance due to its colonial ambitions and its difficult Anglo-French relationship, leading few politicians to safely bet on Italy in any upcoming conflict, though many do agree that the democracy of Italy will most likely support the liberal world order. However, can Italy survive economic hardship and keep its democracy clear and clean?"
+ITA_PAX_BRITANNICA_DESC:0 "With the defeat of the Italian Kingdom in the Great War and the humiliating Treaty of Anzio, the Italian establishment became weak in the eyes of many. The turbulence that the democratic governments experienced in the '20s still haunt Italy in the '30s, with nationalists and socialists continueing to destabilize. Under the fresh ANI government of D'Annunzio, Italy has yet to truely recover from the economic malace of after the Great War and heal from the political violence terrorizing the streets of Naples, Rome and Milan. Can the ANI truely recover Italian glory?"
 
+##########Decisions
+PB_ITA_Red_Month:0 "§RThe Red Months§!"
+PB_ITA_Red_Month_desc:0 "With the death of several major members of the PSI and PSU, general strikes have been called by the socialist opposition in an attempt to paralyze the ANI government. However, it's clear to D'Annunzio's ANI that there's more to the strikes than just paralyzing the government, as the red spectre continues to haunt Europe. The political violence brought on by these strikes and the chaos brought by the anarchists and syndicalists are all symptoms of revolutionary ambitions! \n\nTo keep order and stability in Italy, the ANI will have to either crackdown upon this socialist movement or negotiate a deal with the syndicalists, jacobins and anarchists."
+PB_ITA_Break_Strikes:0 "Crackdown against Strikes"
+PB_ITA_Break_Strikes_desc:0 "Strikes have been a popular method of fulfulling political goals for the socialists of Europe since the 19th century and with the recent expansion of union influence in Italy, strikes have become a major danger for the government and economy. We'll have to crackdown against those filthy workers if we want the economy to survive these months!"
+PB_ITA_Violent_Methodes:0 "§R-Violent Methodes-§!"
+PB_ITA_Cooperate_with_the_Squadristi:0 "Cooperate with the Squadristi"
+PB_ITA_Cooperate_with_the_Squadristi_desc:0 "The Squadristi is a term used to describe the nationalist mobs and squads harassing socialists and workers since the beginning of the political violence in the 1920s. Their existance could be beneficial to the ANI, as these nationalists and their clashes with the socialists could help us push back the reds in several keypoints in Italy."
+PB_ITA_Organize_Tax_Strikes:0 "Organize Tax Strikes"
+PB_ITA_Organize_Tax_Strikes_desc:0 "Despite the fact that strikes are most often used by the left, strikes are far from simply a left-wing concept and could just as easily be utilized by the right! Many inside the party have plans to organize so-called 'tax strikes' in socialist controlled towns and cities, as to disrupt their agenda and spread instability and doubt among their ranks."
+PB_ITA_Diplomatic_Methodes:0 "§Y-Diplomatic Methodes-§!"
+PB_ITA_Murder_Local_Opponents:0 "Assassinate Local Opponents"
+PB_ITA_Murder_Local_Opponents_desc:0 "Murder may be a bit excessive in many cases, but the instability brought by the socialists has been amoral at best, leaving us no other choice but to ignore morality and eliminate local opponents."
+PB_ITA_Meet_with_the_Unions:0 "Meet with the Unions"
+PB_ITA_Meet_with_the_Unions_desc:0 "As the heart of the strikes, the labor unions are rather important players in the chaos. To have them as allies or convince them to stop their strikes would be a massive relief for the government and can be an important stepping stone towards eventual negotiations."
+PB_ITA_Improve_Local_Rights:0 "Release Figureheads"
+PB_ITA_Improve_Local_Rights_desc:0 "The current figureheads of many local movements are either imprisoned or on the run for the law. It would be a great sign of respect and trust towards the workers and the parties involved to release these figureheads from prison."
+PB_ITA_Chain_Local_Squadristi:0 "Surpress the Squadristi"
+PB_ITA_Chain_Local_Squadristi_desc:0 "As local nationalist vigilants, the Squadristi have been a major force fighting against the workers and socialists during the 1920s and '30s. However, they have become a big problem for the government in their pursuit of reaching an agreement with the socialists and should thus be surpressed at all cost."
