Bookmark overhaul, Britain work
set up regionstart bookmark for asia, some work on Britain

--- a/localisation/PB_Germany_l_english.yml
+++ b/localisation/PB_Germany_l_english.yml
@@ -109,6 +109,10 @@
   PB_GER_Agriculture_Mechanization:0 "Mechanization of Agriculture"
   PB_GER_Central_European_Pillar:0 "The Central Pillar of Europe"
 
+  PB_GER_Empire_Management:0 "Büro für kaiserliche Verwaltung"
+  PB_GER_Empire_Management_Africa:0 "Ausschuss für afrikanische Entwicklung"
+  PB_GER_Empire_Management_Asia:0 "Ausschuss für asiatische Entwicklung"
+
   PB_GER_Rearmament:0 "Begin Rearmament"
   
 
