--- a/localisation/PB_News_Events_l_english.yml
+++ b/localisation/PB_News_Events_l_english.yml
@@ -33,9 +33,24 @@
   PBNews.8.a:0 "What does the future hold for Germany?"
 
   PBNews.9.t:0 "The Accession of Kaiser Georg"
-  PBNews.9.d:0 "
-The abdication of Kaiser Rudolf came as a shock to the people of Germany. More surprising was the choice for his successor, Prince Georg of Bavaria. A devout Catholic and military figure, the Bavarian prince was an unlikely choice for the throne of the German state. For many, his accession indicates a noticeable shift in imperial power from Vienna to Munich.\n\nCoronated in a lavish ceremony in Frankfurt, the new Kaiser has quickly drawn the ire of the left-wing Bundestag for his more conservative leanings."
+  PBNews.9.d:0 "The abdication of Kaiser Rudolf came as a shock to the people of Germany. More surprising was the choice for his successor, Prince Georg of Bavaria. A devout Catholic and military figure, the Bavarian prince was an unlikely choice for the throne of the German state. For many, his accession indicates a noticeable shift in imperial power from Vienna to Munich.\n\nCoronated in a lavish ceremony in Frankfurt, the new Kaiser has quickly drawn the ire of the left-wing Bundestag for his more conservative leanings."
   PBNews.9.a:0 "What does the future hold for Germany?"
+
+  PBNews.10.t:0 "Tories win Re-Election in Britain"
+  PBNews.10.d:0 "Though many believed that the Tories would be swept out of power by the stock crisis, it seems Eden's party has managed to narrowly maintain their majority in parliament. Having defeated the upstart NPP and WUP, the Tories have, at least for now, defended their control of the British government.\n\nNow, it falls to the Tory party leadership to choose a new Prime Minister and form their government. With many blaming the Stock Crisis on Anthony Eden, it seems unlikely he will return to the Prime Ministership."
+  PBNews.10.a:0 "Good luck to them."
+
+  PBNews.11.t:0 "Worker's Unionists Elected in Britain"
+  PBNews.11.d:0 "The so-called \"Grand Coalition\" that was the legacy of Anthony Eden has been shattered. Now, the Worker's Unionist Party stands with a majority in the parliament after a stunning snap election victory. A big tent coalition of democratic socialists, Bakuninists, and state socialists, the WUP has long been relegated to minorities in parliament.\n\nHaving finally seized their chance to form a new government, many are eager to see what Britain's new left-wing government has planned."
+  PBNews.11.a:0 "A New Direction for the Empire?"
+
+  PBNews.12.t:0 "National Party Elected in Britain"
+  PBNews.12.d:0 "Though some thought that the fall of the Eden government would turn Britain away from conservatism, it seems the opposite has happened. The National People's Party, a fringe right wing party, has managed to exploit the collapse of the Tory coalition and achieve a majority in parliament.\n\nCampaigning on the restoration of traditional British values, the NPP promises grand reforms to the British people and the Empire."
+  PBNews.12.a:0 "Interesting times we live in."
+
+  PBNews.13.t:0 "The Edwardian Restoration"
+  PBNews.13.d:0 "For the first time in living memory, British troops march through the streets of London. In the dead of the night, a clique of British officers, spurred on by the economic crisis and parliamentary gridlock, rose up and seized the apparatus of state.\n\nIt soon became apparent that the coup had been, if not orchestrated, than at least supported by current King-Emperor Edward. As the new regime consolidates power, elements of the former Parliament have vowed to resist the new regime with all available methods."
+  PBNews.13.a:0 "Democracy dies to thunderous applause"
 
   stockcrisis.1.t:0 "The Stock Crisis hits the Empire"
   stockcrisis.1.d:0 ""
