--- a/localisation/PB_state_names_l_english.yml
+++ b/localisation/PB_state_names_l_english.yml
@@ -556,7 +556,7 @@
  STATE_555:0 "Chishima Islands"
  STATE_556:0 "Northern Mali"
  STATE_557:0 "Mauritanian Desert"
- STATE_558:0 "Nigeria"
+ STATE_558:0 "Central Nigeria"
  STATE_559:0 "Portuguese Somaliland"
  STATE_560:0 "Nikolayevsk"
  STATE_561:0 "Priamurye"
@@ -859,3 +859,7 @@
  STATE_857:0 "Oostkaap"
  STATE_858:0 "Vrije Staat"
  STATE_859:0 "Swaziland"
+ STATE_860:0 "Northern Nigeria"
+ STATE_861:0 "Beninia"
+ STATE_862:0 "Biafra"
+ STATE_863:0 "Oyo"
